--- a/client/src/components/About.css
+++ b/client/src/components/About.css
@@ -1,13 +1,29 @@
-.about-container {
-  background: "./blue-box.png";
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
+
+@media only screen and (max-width: 1026px) {
+  .blue-box {
+    background: url("./AboutPage.png") center center/contain no-repeat;
+    min-height: 300px;
+    margin: 15px;
+    margin-bottom: 0px;
+  }
 }
 
-.blue-box {
-  background: #000957;
-  max-width: 1300px;
-  height: 300px;
-  opacity: 0.75;
-  margin-top: 64px;
-  margin-left: 64px;
-  margin-right: 64px;
+@media only screen and (min-width: 1026px) {
+  .blue-box {
+    background: url("./AboutPage.png") center center/contain no-repeat;
+    min-height: 600px;
+    margin: 15px;
+    margin-bottom: 0px;
+  }
+}
+
+.about-text {
+  font-family: "Lato";
+  font-weight: 400;
+  line-height: 2.5;
+  font-size: 23px;
+  text-align: center;
+  margin: 40px;
+  margin-top: 0px;
 }
