--- a/client/src/components/pages/Skeleton.css
+++ b/client/src/components/pages/Skeleton.css
@@ -19,3 +19,11 @@
   align-items: center;
   flex-direction: column;
 }
+
+.logout-container {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  display: flex;
+  justify-content: flex-end;
+}
