--- a/client/src/components/pages/JoinedGroups.css
+++ b/client/src/components/pages/JoinedGroups.css
@@ -13,15 +13,26 @@
     font-size: 30px;
     font-family: "Lato";
     font-weight: 1000;
+  
+}
+
+.line {
+    height: 0;
+    width: 100%;
+    display: flex;
+    bottom: 75px;
+    border: 0.5px solid grey;
+    position: fixed;
+
 }
 .Join-Code-box {
     display: flex;
-    height: 65px;
     padding: 10px;
     margin: 15px;
     position: fixed;
     bottom:0;
     right:0;
+    border: 3px solid #000957;
 }
 
 .Join-Code-box:hover {
@@ -30,17 +41,19 @@
     background: yellow;
   }
 
-.Join-Code-text {
+.nav-links-code{
     display: flex;
-    width: 200px;
-    border: 3px solid #000957;
-    align-items: center;
+    flex-direction: row;
+    text-decoration: None;
+}
+
+.Join-Code-text {
+    width: 170px;
     font-family: "Lato";
     font-weight: 1000;
-    justify-content: space-around;
 }
 
 .Plus-sign {
     font-family: "Lato";
-    font-weight: 1000; 
+    font-weight: 1000;
 }
