--- a/client/src/components/modules/Group.css
+++ b/client/src/components/modules/Group.css
@@ -1,5 +1,11 @@
 .Group-container {
     display: flex;
-    border: 1px solid black;
+    border: 1px solid white;
     padding: 32px;
+    margin: 64px; 
+    margin-top: -70px;
 }
+
+.Group-container:hover {
+    background: #D9D9D9
+  }
