--- a/client/src/components/modules/Group.css
+++ b/client/src/components/modules/Group.css
@@ -1,11 +1,12 @@
 .Group-container {
-    display: flex;
-    border: 1px solid white;
-    padding: 32px;
-    margin: 64px; 
-    margin-top: -70px;
+  display: flex;
+  border: 1px solid white;
+  padding: 32px;
+  margin: 64px;
+  margin-top: -70px;
+  text-decoration: none;
 }
 
 .Group-container:hover {
-    background: #D9D9D9
-  }
+  background: #d9d9d9;
+}
