--- a/client/src/components/modules/profile/ProfileDesc.css
+++ b/client/src/components/modules/profile/ProfileDesc.css
@@ -1,19 +1,25 @@
 .ProfileDesc-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 55px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: -100px;
+  background-color: #000957;
+  height: 100%;
+  padding-top: 50px;
+  opacity: 0.65;
+}
 
+.ProfileDesc-container:hover {
+  opacity: 1;
 }
 
 .ProfileDesc-name {
-    font-family: "Lato";
-    font-weight: 700;
-    font-size: 25px;
-    color: #000957;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+  font-family: "Lato";
+  font-weight: 700;
+  font-size: 25px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
