--- a/client/src/components/modules/profile/ProfilePic.css
+++ b/client/src/components/modules/profile/ProfilePic.css
@@ -1,14 +1,15 @@
 .ProfilePic-pic {
-    display: flex;
-    width: 152px;
-    height: 152px;
+  display: flex;
+  width: 152px;
+  height: 152px;
 }
 
 .ProfilePic-image {
-    object-fit: cover;
-    width: 152px;
-    height: 152px;
-    border-radius: 50%;
-    border: solid;
-    border-color: blue;
+  object-fit: cover;
+  width: 152px;
+  height: 152px;
+  border-radius: 50%;
+  border: solid;
+  border-color: yellow;
+  z-index: 1000;
 }
