--- a/client/src/components/pages/GroupCode.css
+++ b/client/src/components/pages/GroupCode.css
@@ -1,20 +1,77 @@
 .GroupCode-page {
-    display: flex;
-    border: 1px solid black;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-    
-.GroupCode-page:hover {
-    background: orange
+  display: flex;
+  background-color: #000957;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .GroupCode-container {
-    border: 1px solid black;
-    width: 225px;
-    height: 225px;
+  width: 347px;
+  height: 191px;
+  background-color: white;
+  margin-top: 16px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.GroupCode-enter-code {
+  color: #000957;
+  background-color: white;
+  border: solid;
+  border-color: #000957;
+  width: 293px;
+  height: 64px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-family: "Lato";
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+  border-width: 2px;
+}
+
+.GroupCode-submit {
+  color: white;
+  background-color: #000957;
+  border: solid;
+  border-color: #000957;
+  width: 293px;
+  height: 64px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-family: "Lato";
+  font-size: 30px;
+  font-weight: 700;
+  margin-top: 16px;
+}
+
+.GroupCode-submit:hover {
+  color: #000957;
+  background-color: white;
+  border: solid;
+  border-color: #000957;
+  border-width: 4px;
+  width: 293px;
+  height: 64px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-family: "Lato";
+  font-size: 30px;
+  font-weight: 700;
+  margin-top: 16px;
+  cursor: pointer;
+}
+
+.GroupCode-logo {
+  font-family: "Lato";
+  color: white;
+  font-size: 70px;
 }
