--- a/client/src/components/modules/profile/Profile.css
+++ b/client/src/components/modules/profile/Profile.css
@@ -8,6 +8,15 @@
   text-decoration: none;
   flex-direction: column;
   align-items: center;
+  border: solid;
+  border-color: white;
+  border-width: 7px;
+}
+
+.Profile-container:hover {
+  border: solid;
+  border-color: white;
+  border-width: 0px;
 }
 
 .Profile-pic {
