--- a/client/src/components/pages/ProspectsPage.css
+++ b/client/src/components/pages/ProspectsPage.css
@@ -46,9 +46,10 @@
   font-weight: 1000;
   background-color: rgb(173, 173, 173);
   /* position: fixed; */
-  z-index: -2;
+  z-index: 0;
   flex-direction: column;
   text-align: center;
+  justify-items: space-between;
 }
 
 .IndividualPage-header {
@@ -87,4 +88,34 @@
   font-size: 32px;
   text-decoration: none;
   font-weight: 1000;
+}
+
+.Back-Button {
+  z-index: 1000;
+  font-family: "Lato";
+  font-weight: 1000;
+  background: transparent;
+  color: #000957;
+  display: flex;
+  border: 3px solid #000957;
+  font-size: 20px;
+  padding: 10px;
+  padding-left: 32px;
+  padding-right: 32px;
+  margin-top: 300px;
+  width: 75%;
+  align-items: center;
+  justify-content: center;
+}
+
+.Back-Button:hover {
+  z-index: 1000;
+  font-family: "Lato";
+  font-weight: 1000;
+  background: #000957;
+  color: white;
+  display: flex;
+  border: 3px solid #000957;
+  font-size: 20px;
+  cursor: pointer;
 }
