--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -42,3 +42,9 @@
   color: #fff;
   font-size: 100px;
 }
+
+.App-container {
+  max-width: 960px;
+  padding: var(--m) var (--m);
+  margin: auto;
+}
