fixed passing in the title, descrpition, and img

--- a/client/src/components/modules/GroupDesc.css
+++ b/client/src/components/modules/GroupDesc.css
@@ -14,7 +14,7 @@
 .GroupDesc-Description {
   font-family: "Lato";
   font-size: 16px;
-  color: #717171;
+  color: #5b5b5b;
   margin-top: 32px;
 }
 
