--- a/client/src/components/pages/GroupQuestions.css
+++ b/client/src/components/pages/GroupQuestions.css
@@ -10,6 +10,8 @@
   height: 100%;
   width: 37%;
   background-color: rgb(163, 163, 163);
+  text-align: center;
+  padding-top: 125px;
 }
 
 .GroupQuestions-page {
@@ -74,4 +76,11 @@
   background-color: #000957;
   color: white;
   cursor: pointer;
+}
+
+.GroupQuestions-img {
+  object-fit: cover;
+  width: 225px;
+  height: 225px;
+  margin-top: ;
 }
