--- a/client/src/components/pages/ProspectsPage.css
+++ b/client/src/components/pages/ProspectsPage.css
@@ -102,7 +102,7 @@
   padding: 10px;
   padding-left: 32px;
   padding-right: 32px;
-  margin-top: 300px;
+  margin-top: 16px;
   width: 75%;
   align-items: center;
   justify-content: center;
@@ -167,4 +167,50 @@
   justify-content: flex-end;
   align-items: center;
   padding-right: 32px;
+  flex-direction: row;
+}
+
+.delete-button {
+  background-color: transparent;
+  margin-top: 250px;
+  color: #000957;
+  border: 3px solid #000957;
+  width: 75%;
+  font-size: 20px;
+  padding: 10px;
+  padding-left: 32px;
+  padding-right: 32px;
+  font-weight: 1000;
+  font-family: "Lato";
+}
+
+.delete-button:hover {
+  color: rgb(129, 1, 1);
+  border-color: rgb(129, 1, 1);
+  cursor: pointer;
+}
+
+.group-delete {
+  font-family: "Lato";
+  font-weight: 1000;
+  font-size: 20px;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #000957;
+  padding: 10px;
+  padding-left: 32px;
+  padding-right: 32px;
+  background-color: transparent;
+  margin-right: 8px;
+}
+
+.button-fix {
+  display: flex;
+  flex-direction: row;
+}
+
+.group-delete:hover {
+  color: rgb(129, 1, 1);
+  border-color: rgb(129, 1, 1);
+  cursor: pointer;
 }
