--- a/client/src/components/pages/ProspectsPage.css
+++ b/client/src/components/pages/ProspectsPage.css
@@ -182,6 +182,10 @@
   padding-right: 32px;
   font-weight: 1000;
   font-family: "Lato";
+  text-align: center;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .delete-button:hover {
