--- a/client/src/components/pages/ProspectsPage.css
+++ b/client/src/components/pages/ProspectsPage.css
@@ -106,6 +106,7 @@
   width: 75%;
   align-items: center;
   justify-content: center;
+  margin-bottom: 16px;
 }
 
 .Button-tes {
@@ -172,7 +173,6 @@
 
 .delete-button {
   background-color: transparent;
-  margin-top: 250px;
   color: #000957;
   border: 3px solid #000957;
   width: 75%;
@@ -186,6 +186,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-top: 200px;
 }
 
 .delete-button:hover {
