--- a/client/src/components/pages/GroupQuestions.css
+++ b/client/src/components/pages/GroupQuestions.css
@@ -105,3 +105,9 @@
   font-weight: 1000;
   font-size: 15px;
 }
+
+.GroupQuestions-bottom-emptyspace {
+  width: 100%;
+  height: 100px;
+  background-color: white;
+}
