--- a/client/src/components/pages/ProspectsPage.css
+++ b/client/src/components/pages/ProspectsPage.css
@@ -254,3 +254,15 @@
   height: 100px;
   background-color: white;
 }
+
+.error-message {
+  display: flex;
+  height: 650px;
+  align-items: center;
+  justify-content: center;
+  color: #000957;
+  text-decoration: underline;
+  font-size: 30px;
+  font-family: "Lato";
+  font-weight: 1000;
+}
