--- a/client/src/components/pages/CreateNewGroupsPage.css
+++ b/client/src/components/pages/CreateNewGroupsPage.css
@@ -127,6 +127,8 @@ input[type="file"]::file-selector-button:hover {
   width: 50%;
   height: 32px;
   font-family: "Lato";
+  color: #000957;
+  border-color: #000957;
 }
 
 .emptyspace {
