--- a/client/src/components/pages/GroupQuestions.css
+++ b/client/src/components/pages/GroupQuestions.css
@@ -104,6 +104,8 @@
   font-family: "Lato";
   font-weight: 1000;
   font-size: 15px;
+  margin-right: 16px;
+  margin-left: 16px;
 }
 
 .GroupQuestions-bottom-emptyspace {
