fixed more margin

--- a/client/src/components/pages/ProspectsPage.css
+++ b/client/src/components/pages/ProspectsPage.css
@@ -239,6 +239,7 @@
   color: rgb(65, 65, 65);
   font-weight: 700;
   margin-top: 8px;
+  margin-right: 24px;
   font-family: "Lato";
   font-size: 17px;
 }
